<resources>
    <string name="app_name">My Portfolio App</string>

    <string name="main_text">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

</resources>
